<resources>
    <string name="app_name">Notes</string>

    <!-- Labels / Hints -->
    <string name="label_title">Title</string>
    <string name="label_description">Description</string>
    <string name="label_image_url">Image URL</string>
    <string name="label_priority">Priority: </string>
    <string name="label_save">Save</string>
    <string name="label_test_email">notes@test.com</string>

    <!-- Drawer Labels -->
    <string name="drawer_label_delete_all">Delete All</string>
    <string name="drawer_label_info">Info</string>

    <!-- SnackBar Messages -->
    <string name="message_note_saved">Note Saved</string>
    <string name="message_note_updated">Note Updated</string>
    <string name="message_note_deleted">Note Deleted</string>
    <string name="message_note_deleted_all">All Notes are Deleted</string>

</resources>
