<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.NoteListFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorDarkerWhite"
        android:orientation="vertical"
        android:padding="@dimen/medium">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/small"
            app:cardPreventCornerOverlap="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/medium">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilTitle"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small"
                    android:layout_marginBottom="@dimen/small"
                    android:hint="@string/label_title"
                    app:counterEnabled="true"
                    app:counterMaxLength="20"
                    app:errorEnabled="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:maxLength="20" />

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.constraintlayout.helper.widget.Flow
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:constraint_referenced_ids="tilDescription,tilImage,tvPriority,npPriority,buttonSave"
                    app:flow_maxElementsWrap="1"
                    app:flow_verticalGap="20dp"
                    app:flow_verticalStyle="packed"
                    app:flow_wrapMode="aligned"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tilTitle" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilDescription"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/label_description"
                    app:counterEnabled="true"
                    app:counterMaxLength="300"
                    app:errorEnabled="true"
                    tools:ignore="MissingConstraints">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textMultiLine"
                        android:maxLength="300" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilImage"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/label_image_url"
                    app:counterMaxLength="500"
                    app:errorEnabled="true"
                    tools:ignore="MissingConstraints">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etImage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:maxLength="500" />

                </com.google.android.material.textfield.TextInputLayout>


                <TextView
                    android:id="@+id/tvPriority"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small"
                    android:text="@string/label_priority"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    tools:ignore="MissingConstraints" />

                <com.shawnlin.numberpicker.NumberPicker
                    android:id="@+id/npPriority"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    app:np_dividerColor="@color/colorPrimary"
                    app:np_max="10"
                    app:np_min="0"
                    app:np_orientation="horizontal"
                    app:np_selectedTextColor="@color/colorPrimary"
                    app:np_selectedTextSize="@dimen/text_large"
                    app:np_textColor="@color/colorPrimary"
                    app:np_textSize="@dimen/text_medium"
                    app:np_value="0"
                    tools:ignore="MissingConstraints" />

                <Button
                    android:id="@+id/buttonSave"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@color/colorAccent"
                    android:text="@string/label_save"
                    android:textColor="@android:color/white"
                    tools:ignore="MissingConstraints" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>